# enchanted-grotto

./: .gitignore  CMakeLists.txt  README.md  run.bat  run.sh  run_game.sh  run_tests.sh  vcpkg.json
data/animations/: cauldron_stir.json  grinding.json
data/textures/: asset_credit.txt
doc/: bug-report.xlsx  test-plan.docx
ext/: project_path.hpp
ext/RmlUi/CMake/: Dependencies.cmake
ext/RmlUi/Dependencies/rlottie/: CMakeLists.txt
shaders/: background.fs.glsl  fade.fs.glsl  fog.fs.glsl  fog.vs.glsl  textured.fs.glsl  vignette.fs.glsl  water_A_advection.fs.glsl  water_B_pressure.fs.glsl  water_C_projection.fs.glsl  water_final.fs.glsl  water_vertex.vs.glsl
src/: ai_system.cpp  biome_system.cpp  biome_system.hpp  common.cpp  common.hpp  item_system.cpp  item_system.hpp  main.cpp  physics_system.cpp  potion_system.cpp  potion_system.hpp  render_system.cpp  render_system.hpp  render_system_init.cpp  world_init.cpp  world_init.hpp  world_system.cpp  world_system.hpp
src/systems/: ai_system.cpp  ai_system.hpp  biome_system.cpp  biome_system.hpp  drag_listener.cpp  drag_listener.hpp  item_system.cpp  item_system.hpp  physics_system.cpp  physics_system.hpp  potion_system.cpp  potion_system.hpp  render_system.cpp  render_system.hpp  render_system_init.cpp  respawn_system.cpp  respawn_system.hpp  rmlui_render_interface.cpp  rmlui_render_interface.hpp  rmlui_system_interface.cpp  rmlui_system_interface.hpp  sound_system.cpp  sound_system.hpp  ui_system.cpp  ui_system.hpp  world_system.cpp  world_system.hpp
src/tinyECS/: components.cpp  components.hpp  entity.hpp  registry.hpp  tiny_ecs.hpp
test/: CMakeLists.txt  item_system_test.cpp  potion_system_test.cpp  registry.cpp  test_registry.hpp
